--- a/Responsive/Assets/style1.css
+++ b/Responsive/Assets/style1.css
@@ -13,7 +13,7 @@ header {
 color: #232323;
 float: left;
 width: 100%;
-background: url("bg.png") right center;
+background: #fff;
 }
 header .judul {
 font-size: 17pt;
@@ -38,7 +38,7 @@ float: left;
 padding: 0;
 width: 100%;
 margin: 0 0 0;
-background: #1abc9c;
+background: #f55050;
 -webkit-box-shadow: 1px 1px 1px 0px rgba(204, 204, 204, 0.55);
 -moz-box-shadow: 1px 1px 1px 0px rgba(204, 204, 204, 0.55);
 box-shadow: 1px 1px 1px 0px rgba(204, 204, 204, 0.55);
@@ -59,10 +59,10 @@ text-decoration: none;
 }
 nav.menu ul a:hover {
 text-decoration: underline;
-background: #16a085;
+background: #8a0101;
 }
 .sidebar {
-margin-top: 25px;
+
 float: right;
 width: 275px;
 }
@@ -74,12 +74,12 @@ border-bottom: 2px solid #fff;
 transition: all 0.5s ease;
 }
 .sidebar .widget:hover {
-border-bottom: 2px solid #3498db;
+border-bottom: 2px solid#232323;
 }
 .sidebar .widget h2 {
 padding: 0;
 margin: 0 0 15px;
-color: #3498db;
+color: #232323;
 font-size: 18px;
 font-weight: 800;
 text-transform: uppercase;
@@ -103,15 +103,14 @@ display: block;
 text-decoration: none;
 }
 .menusidebar li a:hover {
-color: #1abf9f
+color:  #f55050
 }
 .blog {
 float: left;
 }
 .conteudo {
-width: 600px;
+width: 650px;
 padding: 0 25px 25px 25px;
-margin: 25px auto;
 background: #fff;
 border: 1px solid #dedede;
 -webkit-box-shadow: 1px 1px 1px 0px rgba(204, 204, 204, 0.35);
@@ -119,7 +118,7 @@ border: 1px solid #dedede;
 box-shadow: 1px 1px 1px 0px rgba(204, 204, 204, 0.35);
 }
 .conteudo img {
-width: 650px;
+width: 700px;
 margin-left: -25px;
 }
 .conteudo h1 {
@@ -151,6 +150,7 @@ text-transform: uppercase;
 padding: 15px 0 15px 0;
 float: left;
 width: 100%;
+height: 10px;
 background-color: #232323
 }
 .footer a {;
